src/modules/texthighlight/texthighlight.scss
.mdl-texthighlight {
  @include sizeCurve('padding', smallerRegular);

  *:last-child {
    margin-bottom: 0;
  }
}

@each $key, $val in $tl-color-variations {
  .#{$key} {
    .mdl-texthighlight {

      background-color: #{rgba($val, 0.07)};

      .atm-figcaption {
        color: #{$val};
      }

      .atm-paragraph {
        color: #{$val};
      }

      ul {
        color: #{$val};

        &.mdl-richtext__benefits {
          li:before {
            background-image: url(svg-tickmark($val)); // stylelint-disable-line
          }
        }
      }

      .mdl-quote {
        cite {
          color: #{$val};
        }
      }

      .atm-heading {
        color: #{$val};
      }

      ol {
        color: #{$val};
      }

      ol li:before {
        color: #{$val};
      }

      &__emphasis {
        p {
          color: #{$val};
        }
      }

      .mdl-linklist {
        &__title {
          color: $val;
        }

        .atm-linklist_item {
          color: rgba($val, 1);
        }
      }

      .atm-text_link {
        color: #{$val};
        border-color: #{$val};

        &:hover {
          color: $colorBlack;
        }
      }
    }
  }
}

.cv-monochrome {
  .mdl-texthighlight {
    .mdl-linklist {
      .atm-linklist_item {
        color: rgba($colorBlack, 0.6);
      }
    }
  }
}

